o2006-02-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_docs.xml: Regenerate from the C files.
	* gtk/src/gtk_docs_override.xml: Update the override for gtk_icon_theme_list_icons(), 
	so that it shows the correct subset examples. Fixes bug #330966 from John Spray 

2006-02-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm.h: Include layout.h, cellview.h, and icontheme.h.
	Bug #332447 from Maxim Udushlivy.

2006-02-24  Rob Page  <page.rob@gmail.com>

 	* gtk/src/icontheme.ccg: Change int* to int to fix segfault. Bug #332437.

2006-02-25  Murray Cumming  <murrayc@murrayc.com>

        * gtk/src/calendar.hg:
        * gtk/src/cellrenderer.hg:
        * gtk/src/messagedialog.hg:
        * gtk/src/textview.hg:
        * gtk/src/treemodelfilter.hg:
        * gtk/src/treepath.hg:
        * gtk/src/treeview.hg:
        * gtk/src/widget.hg: Move the deprecated comment into the _WRAP_METHOD() call,
        using the new feature in glibmm, so that it really shows up in the doxygen
        documentation.

2006-02-22  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* configure.in: only generate Makefiles for specific features if those
	features are enabled (e.g. docs, examples, etc)

2006-02-22  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_docs_override.xml: Added an override for gtk_icon_theme_list_icons() 
	because it mentions GList, memory management of the items, and providing a NULL 
	parameter.
	* gtk/src/icontheme.ccg:
	* gtk/src/icontheme.hg: Added override of list_icons() that returns all icons, 
	regardless of context, to match the NULL context case. Bug #330945 from John Spray.

2006-02-18  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: synchronized the list of widgets without
	windows with the documentation from the Gtk+ tutorial (see
	http://gtk.org/tutorial/x502.html)

2006-02-18  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/style.css: Fixed a couple of tutorial style issues