@@ -6558,23 +6558,16 @@ Now let's look at the connection again:
 Note that we don't pass a pointer to <function>on_button_clicked()</function>
 directly to the signal's <function>connect()</function> method.  Instead, we
 call <function>sigc::ptr_fun()</function>, and pass the result to
-<function>connect()</function>.  What's that
-<function>sigc::ptr_fun()</function> function for?
+<function>connect()</function>.
 </para>
 
 <para>
-<function>sigc::ptr_fun()</function> is a factory function which generates
-<classname>sigc::pointer_functors</classname> that are implicitly
-converted into <classname>sigc::slots</classname>.  A slot is an object which
+<function>sigc::ptr_fun()</function>  generates a <classname>sigc::slot</classname>. 
+A slot is an object which 
 looks and feels like a function, but is actually an object.  These are also
 known as function objects, or functors.
-<classname>sigc::pointer_functors</classname> are functors as well and there
-are many other functor types like, e.g.,
-<classname>sigc::mem_functors</classname> which are generated by
-<function>sigc::mem_fun()</function>.  Any functor that can be called with the
-argument types of the slot can be implicitely converted into a slot, i.e. you
-can pass any compatible functor into a function that expects a
-<classname>sigc::slot</classname>.
+<function>sigc::ptr_fun()</function> generates a slot for a standalone function or static method. 
+<function>sigc::mem_fun()</function> generates a slot for a member method of a particular instance.
 </para>
 
 <para>
@@ -6603,18 +6596,19 @@ main()
 
 <para>
 The first call to <function>connect()</function> is just like the one we saw
-last time; nothing new here.  The next is more interesting.
+last time; nothing new here.</para>
+<para>The next is more interesting. 
 <function>sigc::mem_fun()</function> is called with two arguments.  The first
 argument is <parameter>some_object</parameter>, which is the object that our
-new slot will be pointing at; the second argument is a pointer to one of its
-methods.  This particular version of <function>sigc::mem_fun()</function>
+new slot will be pointing at. The second argument is a pointer to one of its
+methods. This particular version of <function>sigc::mem_fun()</function>
 creates a slot which will, when "called", call the pointed-to method of the
-specified object, in this case
+specified object, in this case 
 <function>some_object.on_button_clicked()</function>.
 </para>
 
 <para>
-Another thing to note about this example is that we placed the call to
+Another thing to note about this example is that we made the call to
 <function>connect()</function> twice for the same signal object.  This is
 perfectly fine - when the button is clicked, both signal handlers will be
 called.
@@ -6623,7 +6617,7 @@ called.
 <para>
 We just told you that the button's <literal>clicked</literal> signal is expecting
 to call a method with no arguments.  All signals have
-requirements like this; you can't hook a function with two arguments
+requirements like this - you can't hook a function with two arguments
 to a signal expecting none (unless you use an adapter, such as
 <function>sigc::bind()</function>, of course).  Therefore, it's important to
 know what type of signal handler you'll be expected to connect to a given
@@ -6642,7 +6636,7 @@ might see in the &gtkmm; headers:
 
 <para>
 <programlisting>
-Glib::SignalProxy1&lt;bool, GtkDirectionType&gt; signal_focus() 
+Glib::SignalProxy1&lt;bool, Gtk::DirectionType&gt; signal_focus() 
 </programlisting>
 </para>
 
@@ -6650,10 +6644,10 @@ Glib::SignalProxy1&lt;bool, GtkDirectionType&gt; signal_focus()
 Other than the signal's name (<literal>focus</literal>), two things are
 important to note here: the number following the word
 <classname>SignalProxy</classname> at the beginning (1, in this case), and the
-types in the list (<type>bool</type> and <type>GtkDirectionType</type>).  The
+types in the list (<type>bool</type> and <type>Gtk::DirectionType</type>).  The
 number indicates how many arguments the signal handler should have; the first
 type, <type>bool</type>, is the type that the signal handler should return; and
-the next type, <type>GtkDirectionType</type>, is the type of this signal's
+the next type, <type>Gtk::DirectionType</type>, is the type of this signal's
 first, and only, argument. By looking at the reference documentation, you can
 see the names of the arguments too.
 </para>
