@@ -1,3 +1,8 @@
+2006-02-25  Murray Cumming  <murrayc@murrayc.com>
+
+	* docs/tutorial/gtkmm-tut.xml: Signals appendix: Remove vague uninteresting stuff 
+	about different functor types, and mention sigc::ptr_fun, mem_fun distinction earlier.
+
 o2006-02-25  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/gtk_docs.xml: Regenerate from the C files.
